--- a/girl.html
+++ b/girl.html
@@ -2,29 +2,40 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grils Products</title>
-    <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-    crossorigin="anonymous"
-  />
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Grils Products</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"
-  ></script>
-  <link rel="stylesheet" href="styles/girl.css">
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <h1>Girls Products</h1>
-    <div id="product-container">
-        <!-- Append all data here -->
-    </div>
+  <h1>👧GIRL FASHION 👧</h1>
+  <nav>
+    <a href="product.html">All Products & Offers</a>
+    <a href="toddler.html">Child</a>
+    <a href="girl.html">Girl</a>
+    <a href="boy.html">Boy</a>
+  </nav>
+  <div id="funcationality">
+  <input type="text" placeholder="Search Product">
+    <select name="sorting" id="sort">
+      <option value="">Sort By Price</option>
+      <option value="LTH">Low - High</option>
+      <option value="HTL">High - Low</option>
+    </select>
+
+  </div>
+  <div id="product-container">
+    <!-- Append all data here -->
+  </div>
 </body>
 <script src="./scripts/girl.js"></script>
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </html>
