--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <a  class="next" onclick="plusSlides(1)">&#10095;</a>
 
         </div> 
-       
+       <h1>hii</h1>
       
 
     <script src="Script/script.js"></script>
