--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
-    <link rel="stylesheet" href="Styles/index.css">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
     
 </head>
@@ -22,10 +22,10 @@
             <li><a href="">Stores & Preschools</a></li>
             <li><a href="">Support</a></li>
             <li><a href="">Track Order</a></li>
-            <li><a href="">Firstcry Parenting</a></li>
-            <li><a href="Sign.html">Login / Register</a></li>
+            <li><a href="Sign-in.html">Login</a></li>
+            <li><a href="Sign-up.html">Register</a></li>
             <li><a href="">Shortlist</a></li>
-            <li><a href="cart.html"><i class="fa fa-cart-shopping"></i></a></li>
+            <li><a href="Cart/cart.html"><i class="fa fa-cart-shopping"></i></a></li>
           </ul>
         </div>
       </section>
@@ -33,18 +33,18 @@
           <ul class="navbar1">
             <li><a href="">ALL CATEGORIES</a>
             <ul class="dropmenu">
-              <li><a href="">Boy Fashion</a></li>
-              <li><a href="">Girl Fashion</a></li>
-              <li><a href="">Kids</a></li>
+              <li><a href="boy.html">Boy Fashion</a></li>
+              <li><a href="girl.html">Girl Fashion</a></li>
+              <li><a href="toddler.html">Kids</a></li>
               <li><a href="">Toys</a></li>
               <li><a href="">Gear</a></li>
               <li><a href="">School</a></li>
               <li><a href="">Book's & CD'S</a></li>
             </ul>
             </li>
-            <li><a href="">BOY FASHION</a></li>
-            <li><a href="">GIRL FASHION</a></li>
-            <li><a href="">KIDS</a></li>
+            <li><a href="boy.html">BOY FASHION</a></li>
+            <li><a href="girl.html">GIRL FASHION</a></li>
+            <li><a href="toddler.html">KIDS</a></li>
             <li><a href="">TOYS</a></li>
             <li><a href="">DIAPERING</a></li>
             <li><a href="">GEAR</a></li>
@@ -110,6 +110,6 @@
        <h1>hii</h1>
       
 
-    <script src="Script/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
