--- a/toddler.html
+++ b/toddler.html
@@ -15,15 +15,20 @@
 </head>
 
 <body>
-  <h1> 👶CHILD FASHION👶</h1>
   <nav>
-    <a href="product.html">All Products & Offers</a>
     <a href="toddler.html">Child</a>
     <a href="girl.html">Girl</a>
     <a href="boy.html">Boy</a>
 </nav>
 <div id="funcationality">
   <input type="text" placeholder="Search Product">
+  <select id="filter">
+    <option value="">All Products</option>
+    <option value="dress">Dress</option>
+    <option value="shoes">Shoes</option>
+    <option value="sweator">Sweator</option>
+    
+  </select>
   <select name="sorting" id="sort">
     <option value="">Sort By Price</option>
     <option value="LTH">Low - High</option>
