--- a/girl.html
+++ b/girl.html
@@ -15,15 +15,19 @@
 </head>
 
 <body>
-  <h1>👧GIRL FASHION 👧</h1>
   <nav>
-    <a href="product.html">All Products & Offers</a>
     <a href="toddler.html">Child</a>
     <a href="girl.html">Girl</a>
     <a href="boy.html">Boy</a>
   </nav>
   <div id="funcationality">
   <input type="text" placeholder="Search Product">
+  <select id="filter">
+    <option value="all">All Products</option>
+    <option value="suits">Suit</option>
+    <option value="frock">Frock</option>
+    <option value="dress">Dress</option>
+  </select>
     <select name="sorting" id="sort">
       <option value="">Sort By Price</option>
       <option value="LTH">Low - High</option>
