--- a/Cart/cart.html
+++ b/Cart/cart.html
@@ -8,15 +8,32 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
     
-    <link rel="stylesheet" href="./styles/cart.css">
+    <link rel="stylesheet" href="../Cart/cart.css">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+  
 </head>
 <body>
+    <div id="main">
+        <div id="offer">
+            <h3>Availabe Offer :</h3>
+            <ul>
+                <li>Upto Rs. 500 Cashback on Paytm Wallet and Postpaid Transactions (Minimum Order Value: Rs. 1000) T&C</li>
+                <!-- <li>Get 5% Instant Discount Upto Rs. 500 on SBI Credit Cards (Minimum Order Value: Rs. 2000) T&C</li>
+                <li>Pay using Simpl and get 5% cashback upto Rs.250 (Minimum Order Value: Rs. 1200) T&C</li>
+                <li>Get 2X cashback upto Rs. 500 on CRED Pay UPI(Minimum Order Value: Rs.1000) T&C</li> -->
+            </ul>
+        </div>
+    </div>
+   
+    <h1 id="total">total count </h1>
+    <!-- <h1>Total Sum : <span id="sum">0</span></h1> -->
+    <div id="product-container"></div>
     
-    <!-- <h1>hii</h1>  -->
-    <div id="cart_container"></div>
-    <!-- <i class="fa-solid fa-trash"></i> -->
-    <!-- <i class="fa-light fa-trash"></i> -->
 </body>
 
 </html>
-<script src="./scripts/cart.js"> </script>
+<script src="./cart.js"> </script>
