Day-3 admin task

--- a/Sign-in.html
+++ b/Sign-in.html
@@ -51,7 +51,7 @@
         localStorage.setItem("username",JSON.stringify(element.fname));
         document.getElementById("heading").style.color = "black"
         document.getElementById("heading").innerText = "Sign in Successful"
-        window.location.href = "user.html";
+        window.location.href = "index.html";
       } else {
         document.getElementById("heading").style.color = "black"
         document.getElementById("heading").innerText = "Wrong Credentials"
