--- a/Sign-up.html
+++ b/Sign-up.html
@@ -18,20 +18,20 @@
             <div class="formgroup">
                 <div class="sameline">
                     <label for="">First Name</label>
-                    <input type="text" id="fname" class="form-control">
+                    <input type="text" id="fname" class="form-control" required>
                 </div>
                 <div class="sameline">
                     <label for="">Last Name</label>
-                    <input type="text" id="lname" class="form-control">
+                    <input type="text" id="lname" class="form-control" required>
                 </div>
             </div>
             <div class="form-wrapper">
                 <label for="">Email</label>
-                <input type="email" id="email" class="form-control">
+                <input type="email" id="email" class="form-control" required>
             </div>
             <div class="form-wrapper">
                 <label for="">Password</label>
-                <input type="password" id="password" class="form-control">
+                <input type="password" id="password" class="form-control" required>
             </div>
             <div class="checkbox">
                 <label>
