--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
       <section id="header">
         <div id="logo">
           <a href=""><img src="https://cdn.fcglcdn.com/brainbees/images/n/fc_logo.png" alt="Error"></a>
-           <input type="text" >
+           <input type="text" placeholder="Search for Catagory, Brand & Product">
            <button><i class="fa-solid fa-magnifying-glass"></i></button>
         </div>
         <div>
+          <div class="openMenu">
+          <ul class="menunav">
+            <li><a href="Sign-in.html">Login</a></li>
+            <li><a href="Sign-up.html">Register</a></li>
+          </ul>
+           <i class="fa fa-bars"></i>
+          </div>
           <ul id="navbar">
             <li><a href="">Select Location</a></li>
             <li><a href="">Stores & Preschools</a></li>
@@ -24,10 +31,11 @@
             <li><a href="">Track Order</a></li>
             <li><a href="Sign-in.html">Login</a></li>
             <li><a href="Sign-up.html">Register</a></li>
-            <li><a href="">Shortlist</a></li>
             <li><a href="Cart/cart.html"><i class="fa fa-cart-shopping"></i></a></li>
+            <div class="closeMenu"><i class="fa fa-times"></i></div>
           </ul>
-        </div>
+          
+        </div> 
       </section>
       <section id="header1">
           <ul class="navbar1">
@@ -52,8 +60,6 @@
             <li><a href="">BATH</a></li>
             <li><a href="">NURSERY</a></li>
             <li><a href="">MOMS</a></li>
-            <li><a href="">HEALTH</a></li>
-            <li><a href="">BOUTIQUES</a></li>
             <a href=""><img src="https://cdn.fcglcdn.com/brainbees/images/n/club_logo.png" alt="Error"></a>
             <a href=""><img src="https://cdn.fcglcdn.com/brainbees/banners/FC-menu-carters-logo.webp" alt="Error"></a>
           </ul>
