--- a/Cart/cart.html
+++ b/Cart/cart.html
@@ -29,7 +29,7 @@
         </div>
     </div>
    
-    <h1 id="total">total count </h1>
+    <h1 id="heading">total count </h1>
     <!-- <h1>Total Sum : <span id="sum">0</span></h1> -->
     <div id="product-container"></div>
     
