project almost done

--- a/boy.html
+++ b/boy.html
@@ -19,14 +19,16 @@
     <a href="toddler.html">Child</a>
     <a href="girl.html">Girl</a>
     <a href="boy.html">Boy</a>
+    <a href="footwear.html">Footwear</a>
+
   </nav>
   <div id="funcationality">
     <input type="text" placeholder="Search Product">
     <select id="filter">
-      <option value="">All Products</option>
-      <option value="shirt">Shirt</option>
-      <option value="dress">Dress</option>
-      <option value="jeans">Jeans</option>
+      <option value="all">All Products</option>
+      <option value="boy T-shirt">Shirt</option>
+      <option value="ethnic wear">Dress</option>
+      <option value="jeans & trousers">Jeans</option>
     </select>
     <select name="sorting" id="sort">
       <option value="default">Sort By Price</option>
@@ -35,7 +37,7 @@
     </select>
   </div>
   <div id="product-container">
-   
+
   </div>
 </body>
 <script src="./scripts/boy.js"></script>
