--- a/girl.html
+++ b/girl.html
@@ -19,17 +19,19 @@
     <a href="toddler.html">Child</a>
     <a href="girl.html">Girl</a>
     <a href="boy.html">Boy</a>
+    <a href="footwear.html">Footwear</a>
+
   </nav>
   <div id="funcationality">
   <input type="text" placeholder="Search Product">
   <select id="filter">
     <option value="all">All Products</option>
-    <option value="suits">Suit</option>
-    <option value="frock">Frock</option>
-    <option value="dress">Dress</option>
+    <option value="sets & suits for girl">Suit</option>
+    <option value="frock & Dresses">Frock</option>
+    <option value="Girl Ethnic wear">Dress</option>
   </select>
     <select name="sorting" id="sort">
-      <option value="">Sort By Price</option>
+      <option value="default">Sort By Price</option>
       <option value="LTH">Low - High</option>
       <option value="HTL">High - Low</option>
     </select>
