--- a/footwear.html
+++ b/footwear.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Child Products</title>
+  <title>Footwear Products</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
@@ -20,15 +20,14 @@
     <a href="girl.html">Girl</a>
     <a href="boy.html">Boy</a>
     <a href="footwear.html">Footwear</a>
-
 </nav>
 <div id="funcationality">
   <input type="text" placeholder="Search Product">
   <select id="filter">
     <option value="all">All Products</option>
-    <option value="toddler">Winter wear</option>
-    <option value="child">Daily Wear</option>
-   
+    <option value="Pine Kids Lace Up Party Wear Shoes- Black">Kids Shoes</option>
+    <option value="Babyoye Sneakers with Velcro Closure - Grey">Baby Shoes</option>
+    <option value="Babyoye Flip Flops With Velcro Closure Rainbow Print & Patch - Blue">Flip Flop</option>
     
   </select>
   <select name="sorting" id="sort">
@@ -42,7 +41,7 @@
     <!-- Append all data here -->
   </div>
 </body>
-<script src="./scripts/toddler.js"></script>
+<script src="./scripts/footwear.js"></script>
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 </html>
