--- a/payment.html
+++ b/payment.html
@@ -9,6 +9,7 @@
     <title>payment</title>
 </head>
 <body>
+    <h6>payment is in proccess....</h6>
     <div class="header">
         <h3>Select Payment method</h3>
         <div class="pay-opt">
@@ -135,9 +136,17 @@
                         <li>TRUSTED & SECURE Payment gateways</li>
                         <li>Easy & hassle-free returns & refunds</li>
                     </ul>
-                    <button id="cod-btn">PAY NOW</button>
+                    <button id="cod-btn"></button>
                 </div>
             </div>
+        </div>
+        <div class="popup">
+            <img src="https://egsgroup.files.wordpress.com/2017/02/payment-successful.png" alt="payment successful">
+            <p class="popup-text">
+                🙂Give Us Your feedback🙂<br>
+                <input type="text" id="input"><br>
+                <button id="button">submit</button>
+            </p>
         </div>
     </div>
 </body>
