--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
         </div> 
       </section>
       <section id="header1">
+         <div class="openMenu1">
+           <div><a href="">All CATEGORIES</a></div>
+           <a href="">BOY FASHION</a>
+           <a href="">GIRL FASHION</a>
+         </div>
           <ul class="navbar1">
             <li><a href="">ALL CATEGORIES</a>
             <ul class="dropmenu">
