--- a/Sign-in.html
+++ b/Sign-in.html
@@ -4,19 +4,19 @@
 <head>
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign-In</title>
   <link rel="stylesheet" href="/Styles/Sign-in.css">
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
 <body>
-  <div id="incontainer" >
-    <form id="form" data-aos="zoom-in"
-    data-aos-duration="1500">
+  <div id="incontainer">
+    <form id="form" data-aos="zoom-in" data-aos-duration="1500">
       <div id="signin">
         <h2 id="heading">LOGIN</h2>
         <div class="form-wrapper">
@@ -47,15 +47,29 @@
     arrdata2.push(objectform2);
     compare_arr.forEach((element, index) => {
       if ((element.email == arrdata2[0].email) && (element.password == arrdata2[0].password)) {
+
+        localStorage.setItem("username", JSON.stringify(element.fname));
+        // document.getElementById("heading").style.color = "black"
+        // document.getElementById("heading").innerText = "Sign in Successful"
+        Swal.fire(
+          `success`,
+          'Sign-in Successful',
+          // 'You clicked the button!',
+          'success'
+        )
+        setTimeout(() => {
+          window.location.href = "user.html";
+        }, 1500)
         
-        localStorage.setItem("username",JSON.stringify(element.fname));
-        document.getElementById("heading").style.color = "black"
-        document.getElementById("heading").innerText = "Sign in Successful"
-        window.location.href = "index.html";
-      } else {
-        document.getElementById("heading").style.color = "black"
-        document.getElementById("heading").innerText = "Wrong Credentials"
-        window.location.href = "sign-in.html"
+      } else if (index == compare_arr.length - 1) {
+        Swal.fire({
+          icon: 'error',
+          title: 'Oops...',
+          text: 'Wrong Credientials',
+        })
+        setTimeout(() => {
+          window.location.href = "sign-in.html"
+        }, 1500)
       }
     });
   })
