--- a/admin.html
+++ b/admin.html
@@ -1,49 +1,225 @@
 <!DOCTYPE html>
-<html lang="en">
+<!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
+<html lang="en" dir="ltr">
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Page</title>
+    <!--<title> Responsiive Admin Dashboard | CodingLab </title>-->
     <link rel="stylesheet" href="Styles/admin.css">
+    <!-- Boxicons CDN Link -->
+    <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
-    <div class="container">
+    <div class="sidebar">
+        <div class="logo-details">
+            <img src="https://cdn.fcglcdn.com/brainbees/images/n/fc_logo.png" alt="logo">
+        </div>
+        <ul class="nav-links">
+            <li>
+                <a href="#" class="active">
+                    <i class='bx bx-grid-alt'></i>
+                    <span class="links_name">Dashboard</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-box'></i>
+                    <span class="links_name">Product</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <i class='bx bx-list-ul'></i>
+                    <span class="links_name">Order list</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+    <section class="home-section">
         <nav>
-            <img src="images/weblogo.png" alt="">
-            <h2>Admin Pannel</h2>
-            <div class="user">
-                <img src="/images/user.png" alt="">
-                <h3>User</h3>
+            <div class="sidebar-button">
+                <i class='bx bx-menu sidebarBtn'></i>
+                <span class="dashboard">Dashboard</span>
+            </div>
+            <div class="search-box">
+                <h3>Admin Pannel</h3>
+            </div>
+            <div class="profile-details">
+                <!-- <img src="images/profile.jpg" alt=""> -->
+                <span class="admin_name">Prem Shahi</span>
+                <i class='bx bx-chevron-down'></i>
             </div>
         </nav>
 
-        <div class="container1" id="cardContainer">
-            <div id="card1">
-                <img src="images/man.png" alt="">
-                <h3>2345</h3>
-                <h2>Total User</h2>
-                <button id="userBtn">Track</button>
+        <div class="home-content">
+            <div class="overview-boxes">
+                <div class="box">
+                    <div class="right-side">
+                        <div class="box-topic">Total Users</div>
+                        <div class="number">200</div>
+                    </div>
+                    <i class='bx bx-cart-alt cart'></i>
+                </div>
+                <div class="box">
+                    <div class="right-side">
+                        <div class="box-topic">Total Product</div>
+                        <div class="number">1200</div>
+                    </div>
+                    <i class='bx bxs-cart-add cart two'></i>
+                </div>
+                <div class="box">
+                    <div class="right-side">
+                        <div class="box-topic">Total Orders</div>
+                        <div class="number">2000</div>
+                    </div>
+                    <i class='bx bx-cart cart three'></i>
+                </div>
+                <!-- <div class="box">
+                    <div class="right-side">
+                        <div class="box-topic">Total Return</div>
+                        <div class="number">11,086</div>
+                        <div class="indicator">
+                            <i class='bx bx-down-arrow-alt down'></i>
+                            <span class="text">Down From Today</span>
+                        </div>
+                    </div>
+                    <i class='bx bxs-cart-download cart four'></i>
+                </div> -->
             </div>
-            <div id="card2">
-                <img src="images/new-product.png" alt="">
-                <h3>9345</h3>
-                <h2>Total Product</h2>
-                <button id="productBtn">Track</button>
-            </div>
-            <div id="card3">
-                <img src="images/order.png" alt="">
-                <h3>13454</h3>
-                <h2>Total Orders</h2>
-                <button id="orderBtn">Track</button>
+
+            <div class="sales-boxes">
+                <div class="recent-sales box">
+                    <div class="title">Recent Sales</div>
+                    <div class="sales-details">
+                        <ul class="details">
+                            <li class="topic">Date</li>
+                            <li><a href="#">02 Jan 2021</a></li>
+                            <li><a href="#">02 Jan 2021</a></li>
+                            <li><a href="#">02 Jan 2021</a></li>
+                            <li><a href="#">02 Jan 2021</a></li>
+                            <li><a href="#">02 Jan 2021</a></li>
+                            <li><a href="#">02 Jan 2021</a></li>
+                            <li><a href="#">02 Jan 2021</a></li>
+                        </ul>
+                        <ul class="details">
+                            <li class="topic">Customer</li>
+                            <li><a href="#">Alex Doe</a></li>
+                            <li><a href="#">David Mart</a></li>
+                            <li><a href="#">Roe Parter</a></li>
+                            <li><a href="#">Diana Penty</a></li>
+                            <li><a href="#">Martin Paw</a></li>
+                            <li><a href="#">Doe Alex</a></li>
+                            <li><a href="#">Aiana Lexa</a></li>
+                            <li><a href="#">Rexel Mags</a></li>
+                            <li><a href="#">Tiana Loths</a></li>
+                        </ul>
+                        <ul class="details">
+                            <li class="topic">Sales</li>
+                            <li><a href="#">Delivered</a></li>
+                            <li><a href="#">Pending</a></li>
+                            <li><a href="#">Returned</a></li>
+                            <li><a href="#">Delivered</a></li>
+                            <li><a href="#">Pending</a></li>
+                            <li><a href="#">Returned</a></li>
+                            <li><a href="#">Delivered</a></li>
+                            <li><a href="#">Pending</a></li>
+                            <li><a href="#">Delivered</a></li>
+                        </ul>
+                        <ul class="details">
+                            <li class="topic">Total</li>
+                            <li><a href="#">$204.98</a></li>
+                            <li><a href="#">$24.55</a></li>
+                            <li><a href="#">$25.88</a></li>
+                            <li><a href="#">$170.66</a></li>
+                            <li><a href="#">$56.56</a></li>
+                            <li><a href="#">$44.95</a></li>
+                            <li><a href="#">$67.33</a></li>
+                            <li><a href="#">$23.53</a></li>
+                            <li><a href="#">$46.52</a></li>
+                        </ul>
+                    </div>
+                    <div class="button">
+                        <a href="#">See All</a>
+                    </div>
+                </div>
+                <div class="top-sales box">
+                    <div class="title">Top Seling Product</div>
+                    <ul class="top-sales-details">
+                        <li>
+                            <a href="#">
+                                <!--<img src="images/sunglasses.jpg" alt="">-->
+                                <span class="product">Vuitton Sunglasses</span>
+                            </a>
+                            <span class="price">$1107</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!--<img src="images/jeans.jpg" alt="">-->
+                                <span class="product">Hourglass Jeans </span>
+                            </a>
+                            <span class="price">$1567</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!-- <img src="images/nike.jpg" alt="">-->
+                                <span class="product">Nike Sport Shoe</span>
+                            </a>
+                            <span class="price">$1234</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!--<img src="images/scarves.jpg" alt="">-->
+                                <span class="product">Hermes Silk Scarves.</span>
+                            </a>
+                            <span class="price">$2312</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!--<img src="images/blueBag.jpg" alt="">-->
+                                <span class="product">Succi Ladies Bag</span>
+                            </a>
+                            <span class="price">$1456</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!--<img src="images/bag.jpg" alt="">-->
+                                <span class="product">Gucci Womens's Bags</span>
+                            </a>
+                            <span class="price">$2345</span>
+                        <li>
+                            <a href="#">
+                                <!--<img src="images/addidas.jpg" alt="">-->
+                                <span class="product">Addidas Running Shoe</span>
+                            </a>
+                            <span class="price">$2345</span>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <!--<img src="images/shirt.jpg" alt="">-->
+                                <span class="product">Bilack Wear's Shirt</span>
+                            </a>
+                            <span class="price">$1245</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <div class="data_wrapper" id="mainSection">
-        </div>
-    </div>
+    </section>
+
+    <script>
+        let sidebar = document.querySelector(".sidebar");
+        let sidebarBtn = document.querySelector(".sidebarBtn");
+        sidebarBtn.onclick = function () {
+            sidebar.classList.toggle("active");
+            if (sidebar.classList.contains("active")) {
+                sidebarBtn.classList.replace("bx-menu", "bx-menu-alt-right");
+            } else
+                sidebarBtn.classList.replace("bx-menu-alt-right", "bx-menu");
+        }
+    </script>
+
 </body>
-<script src="admin.js"></script>
 
 </html>
