--- a/user.html
+++ b/user.html
@@ -19,8 +19,8 @@
         <div>
           <div class="openMenu">
           <ul class="menunav">
-            <li><a href="Sign-in.html">Login</a></li>
-            <li><a href="Sign-up.html">Register</a></li>
+            <li><i class="fa-solid fa-user"></i></li>
+            <li><h3 id="displayname"></h3></li>
           </ul>
            <i class="fa fa-bars"></i>
           </div>
@@ -29,8 +29,8 @@
             <li><a href="">Stores & Preschools</a></li>
             <li><a href="">Track Order</a></li>
             <li><a href="">Support</a></li>
-            <li><a href="Sign-in.html">Login</a></li>
-            <li><a href="Sign-up.html">Register</a></li>
+             <li><i class="fa-solid fa-user"></i></li>
+             <li><h3 id="displayname1"></h3></li>
             <li><a href="Cart/cart.html"><i class="fa fa-cart-shopping"></i></a></li>
             <div class="closeMenu"><i class="fa fa-times"></i></div>
           </ul>
@@ -50,7 +50,6 @@
             <li><a href="">Nursery</a></li>
             <li><a href="">Moms</a></li>
           </ul></li>
-          
            <li><a href="boy.html">BOY FASHION</a>
             <ul class="dropmenu">
               <li><a href="boy.html">Shirts</a></li>
